# LightningROD

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  auth.py  autonomicData.py  config.py  create_database.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  fordpass_new.py  influx.py  input.css  lightningROD.py  lightningROD_influx.py  main.py  package-lock.json  package.json  pyproject.toml  zensical.toml
data/: ev_charging_sample.csv  fake_charging_sessions_sample.csv
db/: engine.py
db/migrations/: add_network_color.sql  env.py
db/migrations/versions/: 2b6f55486b4d_initial_schema.py  (+13 more)
db/models/: __init__.py  battery_status.py  charging_session.py  location.py  reference.py  trip_metrics.py  vehicle.py  vehicle_status.py
docs/: changelog.md  index.md
docs/development/: architecture.md  css.md  database.md  setup.md
docs/getting-started/: configuration.md  data-import.md  installation.md
docs/guide/: costs.md  csv-import.md  dashboard.md  energy.md  home-assistant.md  sessions.md  settings.md
docs/stylesheets/: extra.css
grafana/: LightningROD.json
scripts/: seed.py
static/css/: output.css
tests/: test_csv_parser.py  test_location_resolution.py
web/: dependencies.py  main.py
web/queries/: comparisons.py  costs.py  dashboard.py  energy.py  locations.py  sessions.py  settings.py  vehicles.py
web/routes/: charging.py  costs.py  csv_import.py  dashboard.py  energy.py  sessions.py  settings.py
web/services/: csv_parser.py  hass_client.py  hass_processor.py
web/templates/: base.html
(+44 files in other folders)
